# eval-platform

./: .env.production.example  .gitignore  CLAUDE.md  docker-compose.161.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_add_indexes.py  0003_add_snapshot_fields.py  0004_phase2_field_restructure.py  0005_encrypt_sensitive_data.py  0006_add_users_and_project_owner.py  5e49897db95b_initial_tables.py  b823ab70572f_add_response_format_to_agent_versions.py  bb85f71f2b8a_fix_timestamp_columns.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/api/: agent_versions.py  auth.py  batch_tests.py  builder_agent.py  builder_conversations.py  judge_configs.py  model_configs.py  project_files.py  projects.py  providers.py  test_cases.py
backend/app/llm/: anthropic_adapter.py  base.py  factory.py  openai_adapter.py
backend/app/models/: __init__.py  agent_version.py  base.py  batch_test.py  builder_conversation.py  judge_config.py  model_config.py  project.py  project_file.py  provider_config.py  test_case.py  user.py
backend/app/schemas/: agent_version.py  auth.py  batch_test.py  builder_agent.py  builder_conversation.py  judge_config.py  model_config.py  project.py  project_file.py  provider.py  test_case.py
backend/app/utils/: crypto.py  (+1 more)
backend/tests/: conftest.py  test_auth_service.py  test_crypto.py  test_input_sanitizing_and_openai_adapter.py
(+115 files in other folders)
